--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+h1{
+    color: purple;
+    font-family: fantasy;
+    font-size: 30px;
+}
+ul{
+    list-style-type: none;
+}
+ol{
+    font-weight: bold;
+}
+li{
+    text-align: center;
+    color: blue;
+    border: 1px solid red;
+    border-radius: 20px;
+    background-color: pink;
+    padding-left: 30px;
+}
 body{
+    font-family: sans-serif;
     background-color: aqua;
+}
+h3{
+    text-decoration: underline;
+}
+p{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    height: 200px;
 }
